oxiplate-derive/tests/broken/statements/closed-like-writ-whitespace-remove.stderr
error: "%}" expected
 --> tests/broken/statements/closed-like-writ-whitespace-remove.rs:4:32
  |
4 | #[oxiplate_inline("{% continue -}}")]
  |                                ^^^
